Add bundled GUI+CLI archives per OS and update docs

--- a/docs/releasenotes/v0.1.0.md
+++ b/docs/releasenotes/v0.1.0.md
@@ -1,4 +1,46 @@
-# v0.1.0 Release Notes
+# v0## What's included
+- **Bundles** (recommended): `psm-windows-amd64.zip`, `psm-linux-amd64.tar.gz`, `psm-macos-amd64.tar.gz` - each contains both GUI and CLI
+- **Individual binaries** (for advanced use): separate CLI and GUI downloads per platform
+- SHA-256 checksums for all bundles
+- Configuration and docs in the repository
+
+## Download Options
+
+### Option 1: Bundles (Recommended)
+Download one bundle for your platform. Each bundle contains **both** the GUI and the CLI:
+
+- **Windows**: `psm-windows-amd64.zip` → extract to get `psm-gui.exe` and `psm-cli.exe`
+- **macOS**: `psm-macos-amd64.tar.gz` → extract to get `psm-gui` and `psm-cli`
+- **Linux**: `psm-linux-amd64.tar.gz` → extract to get `psm-gui` and `psm-cli`
+
+**Why bundles?**
+- Ensures GUI and CLI versions match
+- Clean internal names (no platform suffix inside)
+- Includes SHA-256 checksums for verification
+
+### Option 2: Individual Binaries
+If you only need the CLI or prefer separate downloads:
+- Windows: `psm-gui-windows-amd64.exe`, `psm-cli-windows-amd64.exe`
+- macOS: `psm-gui-macos-amd64`, `psm-cli-macos-amd64`
+- Linux: `psm-gui-linux-amd64`, `psm-cli-linux-amd64`
+
+**Important**: The GUI requires the CLI to function. If downloading individually, get both for your platform and keep them in the same folder.
+
+## Quick start
+
+### Using Bundles (Recommended)
+1) Download the bundle for your OS (zip for Windows, tar.gz for macOS/Linux)
+2) Extract the archive
+3) Run the GUI:
+   - **Windows**: double-click `psm-gui.exe`
+   - **macOS/Linux**: `chmod +x psm-gui` then `./psm-gui`
+
+### Using Individual Binaries
+1) Download both `psm-gui-*` and `psm-cli-*` for your platform
+2) Put them in the same folder
+3) Run the GUI:
+   - **Windows**: double-click `psm-gui-windows-amd64.exe`
+   - **macOS/Linux**: `chmod +x psm-gui-macos-amd64` (or linux), then `./psm-gui-macos-amd64`
 
 This is the first public release of Playlist Sync Matcher.
 
