Reorganized README to prominently feature both CLI and GUI before Installation, moved Features table to top, added dedicated CLI section with common commands.

--- a/docs/releasenotes/v0.1.0.md
+++ b/docs/releasenotes/v0.1.0.md
@@ -1,7 +1,6 @@
 # v0## What's included
 - **Bundles** (recommended): `psm-windows-amd64.zip`, `psm-linux-amd64.tar.gz`, `psm-macos-amd64.tar.gz` - each contains both GUI and CLI
 - **Individual binaries** (for advanced use): separate CLI and GUI downloads per platform
-- SHA-256 checksums for all bundles
 - Configuration and docs in the repository
 
 ## Download Options
@@ -16,7 +15,7 @@ Download one bundle for your platform. Each bundle contains **both** the GUI and
 **Why bundles?**
 - Ensures GUI and CLI versions match
 - Clean internal names (no platform suffix inside)
-- Includes SHA-256 checksums for verification
+- GitHub shows SHA-256 hashes for verification
 
 ### Option 2: Individual Binaries
 If you only need the CLI or prefer separate downloads:
