--- a/docs/releasenotes/v0.1.2.md
+++ b/docs/releasenotes/v0.1.2.md
@@ -1,51 +1,89 @@
 # v0.1.2 Release Notes
 
-**Release Date:** TBD
+**Release Date:** November 1, 2025
 
 ## What's New
 
+This release focuses on **developer experience, code quality, and infrastructure improvements**. No new end-user features, but significant enhancements to the development workflow and CI/CD pipeline.
+
 ### 🐛 Bug Fixes
 
-*Placeholder - add bug fixes here*
+#### CLI Command Registration
+- **Fixed missing commands** - `analyze`, `diagnose`, `config`, and OAuth commands (`redirect-uri`, `token-info`) were not properly registered in the CLI
+- **Fixed help text** - Corrected `match-diagnose` → `diagnose` in help examples to match actual command name
+- **Fixed tests** - Updated test assertions to check for correct command names
 
-### ✨ Features
+### 🔧 Developer & Infrastructure Improvements
 
-*Placeholder - add new features here*
+#### Code Quality & Formatting
+- **Black Formatting** - Applied consistent PEP 8 formatting across entire codebase (203 files)
+- **Format Enforcement** - Added GitHub Actions workflow to enforce Black formatting on all PRs
+- **Code Analysis Tools** - Enhanced `analyze_code.py` with link checking integration and UTF-8 support
 
-### 🔧 Developer Improvements
+#### Requirements Split (Smaller Executables!)
+- **Created `requirements-dev.txt`** - Separated development tools from runtime dependencies
+- **Reduced executable sizes** - Dev tools (pytest, black, flake8, lizard, autoflake) no longer bundled in executables
+- **Updated PyInstaller specs** - Explicitly exclude dev/test tools from builds
+- **Updated workflows** - CI uses `requirements-dev.txt`, releases use `requirements.txt` + pyinstaller only
 
-Since v0.1.1, we've enhanced the development experience and CI/CD pipeline:
-
-#### Code Quality Tools
-- **Link Validation** - New `check_links.py` script fixed 174 broken documentation links
-- **Code Cleanup** - New `cleanup_code.py` automates formatting and import cleanup
-- **Analysis Integration** - Enhanced `analyze_code.py` with link checking and UTF-8 support
-
-#### CI/CD Pipeline
-- **macOS Testing** - Added macOS to CI test matrix for complete platform coverage
+#### CI/CD Pipeline Enhancements
+- **macOS Testing** - Added macOS to test matrix for complete platform coverage (Ubuntu, Windows, macOS)
 - **Pre-release Detection** - Automatic handling of rc/beta/alpha release tags
-- **Better Caching** - Simplified pip caching for faster CI builds
-- **Quality Gates** - Integrated link checking, code analysis, and Black formatting checks
+- **Link Validation** - Integrated link checking into CI workflow
+- **Code Quality Checks** - Automated complexity, style, and formatting checks
+- **Better Caching** - Simplified pip caching with `cache: 'pip'` for faster builds
+- **Step Summaries** - Enhanced GitHub Actions visibility with step summaries
 
 #### Documentation
-- **Streamlined README** - Reduced from 815 to 336 lines (59% smaller)
-- **Cleanup** - Removed 3 outdated documentation files (518 lines)
-- **All Links Valid** - Fixed all broken cross-references
+- **Streamlined README** - Reduced from 815 to 336 lines (59% smaller), removed redundancy
+- **Fixed 174 broken links** - Comprehensive link validation and repair across all documentation
+- **Removed outdated docs** - Deleted 3 obsolete files (ai-assessment.md, GUI DEVELOPMENT.MD, etc.)
+- **New documentation** - Added `MISSING_DOCS.md` to track potentially useful docs, `REQUIREMENTS-SPLIT.md` explaining dependency separation
 
-These improvements make the project easier to contribute to and ensure higher quality future releases.
+#### Development Tools
+- **Link Checker** (`check_links.py`) - Validates all markdown links across 60 documentation files
+- **Code Cleanup** (`cleanup_code.py`) - Automated Black formatting, whitespace cleanup, unused import removal
+- **Enhanced Analyzer** (`analyze_code.py`) - Integrated link checking, UTF-8 Windows support
+
+### 📦 Build Improvements
+
+**Smaller Executables:**
+By excluding dev tools from PyInstaller builds, the executables are now smaller and faster to build. Dev dependencies are only installed during development and CI testing.
+
+**Faster CI Builds:**
+Simplified dependency installation and better caching reduce CI build times.
 
 ## Download Options
 
 ### Bundles (Recommended)
 Each bundle contains **both** the GUI and the CLI:
-- **Windows**: `playlist-sync-matcher-v0.1.2-windows-amd64.zip` → `psm-gui.exe` + `psm-cli.exe`
-- **macOS**: `playlist-sync-matcher-v0.1.2-macos-amd64.tar.gz` → `psm-gui` + `psm-cli`
-- **Linux**: `playlist-sync-matcher-v0.1.2-linux-amd64.tar.gz` → `psm-gui` + `psm-cli`
+- **Windows**: `playlist-sync-matcher-v0.1.2-Win64.zip` → `psm-gui.exe` + `psm-cli.exe`
+- **macOS**: `playlist-sync-matcher-v0.1.2-macOS-x64.tar.gz` → `psm-gui` + `psm-cli`
+- **Linux**: `playlist-sync-matcher-v0.1.2-Linux64.tar.gz` → `psm-gui` + `psm-cli`
 
 ## Upgrade Notes
 
 ### From v0.1.1
 No breaking changes or database migrations required. Simply replace your executables with the new versions.
+
+**For developers:**
+- Run `run.bat install` or `pip install -r requirements-dev.txt` to install updated dependencies
+- Black formatting is now enforced - run `run.bat cleanup changed` to format your code
+
+## Technical Details
+
+### Requirements Structure
+- **`requirements.txt`** - Runtime dependencies only (bundled in executables)
+- **`requirements-dev.txt`** - Development tools (pytest, black, flake8, etc.) + runtime deps
+
+### PyInstaller Exclusions
+Both CLI and GUI specs now explicitly exclude:
+- pytest, black, flake8, lizard, autoflake
+- pycodestyle, pyflakes, mccabe
+
+### CI Workflow Changes
+- **CI (testing)**: Uses `requirements-dev.txt`
+- **Release (building)**: Uses `requirements.txt` + `pyinstaller==6.3.0`
 
 ## Full Changelog
 
