--- a/docs/releasenotes/v0.1.3.md
+++ b/docs/releasenotes/v0.1.3.md
@@ -1,7 +1,7 @@
 # v0.1.3 Release Notes
 
-**Release Date:** TBD  
-**Status:** 🚧 In Development
+**Release Date:** January 17, 2026  
+**Status:** ✅ Released
 
 ## What's New
 
@@ -41,11 +41,22 @@ This feature is particularly helpful when you have:
 
 ### Bug Fixes
 
-[To be added during development]
+#### GUI Watch Mode Improvements
+- **Fixed: Buttons not re-activating when watch mode is disabled**
+  - Action buttons are now immediately re-enabled when manually stopping watch mode
+  - Proper UI state restoration ensures seamless workflow continuation
+  
+- **Fixed: Unnecessary data refresh when watch mode ends**
+  - Removed redundant database query when stopping watch mode
+  - Faster and smoother user experience when toggling watch mode
+  - No "Loading tracks" progress dialog on watch mode stop
 
-### Performance Improvements
+### Code Quality Improvements
 
-[To be added during development]
+- **Refactored `set_match` function** to reduce complexity
+  - Extracted helper functions for better maintainability
+  - Reduced cyclomatic complexity from 35 to <15
+  - Improved code readability and testability
 
 ## Technical Details
 
@@ -74,17 +85,6 @@ No breaking changes - this is a feature addition release.
 - Tracks without ISRC fall back to single-track matching
 - Currently propagates by ISRC only (not by metadata similarity)
 
-## Coming Next
-
-Potential future enhancements:
-- Configuration option for default propagate behavior
-- Metadata-based duplicate detection (when ISRC unavailable)
-- Bulk manual matching interface for many tracks
-
 ## 🙏 Thanks
 
 Thanks to all users for feedback and feature requests that drive these improvements!
-
----
-
-**Status:** This release is currently in development. Features and details may change before final release.
